# lipsum_best

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  docker-compose.yml  main.cpp
db_handler/: Cargo.toml
db_handler/src/: waaier.rs
docker/: Dockerfile  startup.sh
include/: server.hpp  utility.hpp
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2020-03-11-141947_waaier_history/: down.sql  up.sql
src/: database.rs  db.rs  main.rs  models.rs  schema.rs  server.cpp  waaier.rs
