[package]
name = "lipsum_best"
version = "0.1.0"
authors = ["Yuhanun Citgez <y.citgez@student.utwente.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
diesel = { version = "1.4.3", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4.11"
serde_json = "1.0.48"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["diesel_postgres_pool"]